add agent support hot deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,5 @@ redis.testWhileIdle=true
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-
-
-
+app.agentCustomLoader = true
 swagger.enable=true
