add logback config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 app.agentCustomLoader = true
 swagger.enable=true
+
+
+
+logging.file=/logs/springboot.log
+logging.level.org.springframework.web=info
